Formatting changes in R Notebook

--- a/Code/Lynsey Keator Assignment #7.Rmd
+++ b/Code/Lynsey Keator Assignment #7.Rmd
@@ -5,12 +5,12 @@ output:
     df_print: paged
 ---
 
-####Question 1
-###Create a function that accepts (1) a quantitative response variable, (2) a quantitative explanatory variable, and (3) a number. Suppose we denote the response variable as y, the explanatory variable as x, and the number as p. Your function should model y as a linear function of x and then for each (x,y) pair determine if the residual is one of the p largest in the set of the residuals, with lagest defined in terms of the absolute value (i.e. a residual of -10 is just as large as a residual of 10). The function should return a logical vector indicating TRUE for each pair that has one of the pth largest residuals and FALSE otherwise.
+## Question 1
+### *Create a function that accepts (1) a quantitative response variable, (2) a quantitative explanatory variable, and (3) a number. Suppose we denote the response variable as y, the explanatory variable as x, and the number as p. Your function should model y as a linear function of x and then for each (x,y) pair determine if the residual is one of the p largest in the set of the residuals, with lagest defined in terms of the absolute value (i.e. a residual of -10 is just as large as a residual of 10). The function should return a logical vector indicating TRUE for each pair that has one of the pth largest residuals and FALSE otherwise.*
 
-x = explanatory variable
-y = response variable
-p = a number
+x = explanatory variable,
+y = response variable,
+p = a number,
 
 ```{r}
 lm.regressresiduals <-function(x, y, p) {
@@ -37,8 +37,8 @@ lm.regressresiduals(x, y, 5)
 ```
 
 
-####Question 2
-###Obtain a real data set with quantitative response and explanatory variables (n>=50). Plot these on a scatterplot with a regression line. Use your function to help you highlight the 10% largest residuals on the scatterplot.
+## Question 2
+### *Obtain a real data set with quantitative response and explanatory variables (n>=50). Plot these on a scatterplot with a regression line. Use your function to help you highlight the 10% largest residuals on the scatterplot.*
 
 ```{r echo=FALSE}
 library(here)
